[package]
name = "async-locks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures = { version = "0.3.24" }
asynchronous-codec = "0.6.0"
